# blindsight-ai

./: .gitignore  DEPLOYMENT.md  README.md  dev.sh  docker-compose.yml
blindsight-backend/: .dockerignore  .env.example  Dockerfile  Procfile  main.py  pyproject.toml  requirements.txt
blindsight-frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
blindsight-frontend/app/: layout.tsx  page.tsx  providers.tsx
blindsight-frontend/app/api/token/: route.ts
blindsight-frontend/components/: ActiveCallScreen.tsx  AgentAudioPlayer.tsx  CameraView.tsx  LandingScreen.tsx
